@@ -42,13 +42,13 @@ Added by <sha@kvl.dk>, 2000.")
   (volatilization 0.0 [])
   (om (AOM-SLOW (initial_fraction 0.72 [])
                 (C_per_N 100 [(g C/cm^3)/(g N/cm^3)])
-                (turnover_rate 2.0e-4 [h^-1])
+                (turnover rate 2.0e-4 [h^-1])
                 (efficiency 0.60 0.60 []))
       (AOM-FAST (initial_fraction 0.18 [])
-                (turnover_rate 2.0e-3 [h^-1])
+                (turnover rate 2.0e-3 [h^-1])
                 (efficiency 0.60 0.60 []))
       (AOM-DIRECT (C_per_N 11 [(g C/cm^3)/(g N/cm^3)])
-                  (turnover_rate 1.0 [h^-1]))))
+                  (turnover rate 1.0 [h^-1]))))
 
 (defam cattle_slurry slurry
   (description "Numbers found by <hsv@kvl.dk>, 2001.")
