@@ -43,6 +43,14 @@
 	* src/daisy/organic_matter/bioincorporation.C (respiration): Set
 	to zero by default.
 
+2025-03-11  Per Abrahamsen  <pa@plen.ku.dk>
+
+	* src/daisy/organic_matter/dom.C: Use rate.
+
+	* lib/fertilizer.dai (slurry): Use Rate.
+	* lib/chemistry-base.dai (solid, classic, Tracer, colloid): Ditto.
+	* lib/chemistry.dai: Ditto.
+
 2025-03-10  Per Abrahamsen  <pa@plen.ku.dk>
 
 	* lib/log-std.dai ("Field chemical", "Field nitrogen"):
